# emcaps

./: LICENSE  README.md  class_info.yaml  eclassify_analysis.py  eclassify_compute.py  effnetv2.py  environment.yml  frozen-environment.yml  frozen-requirements.txt  patchlineplots.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  valid_split.yaml
_legacy/inference/: eclassify_compute.py  inference_legacy.py  patchifyseg.py
_legacy/training/: mxqtsegtrain.py  tumtrain2d.py
_scripts/: patcheval.sh  rsync-models.sh  seg_cls_test.sh
analysis/: average_patches.py  cf_matrix.py  demo_patchlineplots.py  eclassify_analysis.py  encari.py  naparivis.py  patchlineplots.py  radial_patchlineplots.py  size_analysis.py
conf/: config.yaml
emcaps/: class_info.yaml  model_registry.yaml
emcaps/analysis/: average_patches.py  averagepatches.py  cf_matrix.py  encari.py  naparivis.py  radial_patchlineplots.py  size_analysis.py
emcaps/conf/: config.yaml
emcaps/inference/: __legacy_segment.py  dbsegment.py  patcheval.py  patchifyseg.py  patchmodel_eval.py  seginference.py  segment.py
emcaps/training/: patchtrain.py  segtrain.py  tifdirdata.py
emcaps/utils/: colorlabel.py  (+4 more)
inference/: eclassify_compute.py  inference.py  patchifyseg.py  patchifyseg2.py  patchifyseg3.py  patchifyseg4.py  patchifyseg6.py  patchmodel_eval.py  patchmodel_eval4.py  patchmodel_mv_eval.py  patchmodel_mv_eval6.py  seginference.py
models/: cct.py
training/: mxqtsegtrain.py  mxqtsegtrain2.py  patchtrain.py  segtrain.py  tifdirdata.py  tumtrain2d.py
utils/: splitdataset.py  utils.py
