[metadata]
name = emcaps
version = 0.1.0
description = Code for the paper Genetically encoded barcodes for correlative volume electron microscopy
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT license
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = True
include_package_data = True
# install_requires =
#     pandas == 1.4.1

[options.entry_points]
console_scripts =
    emcaps-segment = emcaps.inference.segment:main


[options.package_data]
* = README.md, *.yaml
